All event types can change values.

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -297,6 +297,10 @@ table.align-top td {
     border: 1px solid #dddddd;
 }
 
+.spacious {
+    margin: 10px 0;
+}
+
 .spacious th {
     padding: 10px;
 }
