Save all event default selections.

--- a/app/templates/configure/index.html
+++ b/app/templates/configure/index.html
@@ -117,5 +117,10 @@
             });
         }
         //document.addEventListener('DOMContentLoaded', updateLinks);
+
+        {% if session.get('clear_local_storage') %}
+            localStorage.clear();
+            console.log("Local storage cleared.");
+        {% endif %}
     </script>
 {% endblock %}
